invalid_var_sym_sym_arg_keywords_test/invalid_var_sym_sym_arg_keywords_test_73.src
.IPPcode24
STRI2INT int@49